--- a/library.properties
+++ b/library.properties
@@ -8,4 +8,4 @@ category=Device Control
 url=https://github.com/m5stack/DEMO-BOARD
 architectures=esp32
 includes=
-depends=FastLED,UNIT_ENV,Adafruit MCP4725,Adafruit TCS34725,Adafruit NeoPixel,MAX30100lib,MFRC522_I2C,M5GFX,M5_BM8563,M5_ADS1100,M5_ADS1115,M5_FPC1020A,HX711 Arduino Library,PCA9554,Adafruit SGP30 Sensor,FFT,TFTTerminal,ClosedCube TCA9548A,Ethernet2,ESP8266Audio,M5_EzData,ArduinoJson,PubSubClient
+depends=M5Stack,Keypad,FastLED,Adafruit BMP280 Library,Adafruit Unified Sensor,UNIT_ENV,MFRC522 i2c Library
