--- a/library.properties
+++ b/library.properties
@@ -8,4 +8,4 @@ category=Device Control
 url=https://github.com/m5stack/DEMO-BOARD
 architectures=esp32
 includes=
-depends=M5Stack,Keypad,FastLED,Adafruit BMP280 Library,Adafruit Unified Sensor,UNIT_ENV,MFRC522 i2c Library
+depends=M5Stack,Keypad,FastLED,Adafruit BMP280 Library,Adafruit Unified Sensor,UNIT_ENV,MFRC522 i2c Library,Adafruit BusIO
