add Demo Board (SHT30 VERSION) example

--- a/library.properties
+++ b/library.properties
@@ -8,4 +8,4 @@ category=Device Control
 url=https://github.com/m5stack/DEMO-BOARD
 architectures=esp32
 includes=
-depends=M5Stack,Keypad,UNIT_ENV,FastLED,Adafruit BMP280 Library,Adafruit Unified Sensor,UNIT_ENV,MFRC522 i2c Library,Adafruit BusIO
+depends=M5Stack,Keypad,M5Unit-ENV,FastLED,Adafruit BMP280 Library,Adafruit Unified Sensor,UNIT_ENV,MFRC522 i2c Library,Adafruit BusIO,
